# ParallelProgrammingSecondSem

./: README.md
FFT/: Makefile  fft.cc  fft_par.cc  parallel  plot.py  serial
balancing/: .~lock.balancing results.xlsx#  balance  balancing results.xlsx  balancing.cpp
copyin/: copyin  copyin.cpp
exponent/: exp  exp.c  series  series.cpp
hello_world/: hello  hello.c
matrics_mult/: matr  matrix.c
nested_parallel/: nested  nested.cpp
open_cl/: CMakeLists.txt  main.cc  params.cc
quicksort/: gen_random.sh  quick  quicksort.c
reading_array/: arr  array  array.c
seq_access/: seq_access  seq_access.cpp
sieve/: sieve  sieve_non_parallel.c  sieve_np  sieve_parallel.c
sum/: sum  sum.cpp
