set(CMAKE_PREFIX_PATH "/home/vasilii/programming/parallel_prog_7_sem/opencl_toolchain/OpenCL-Headers/build")
set(CMAKE_PREFIX_PATH "/home/vasilii/programming/parallel_prog_7_sem/opencl_toolchain/OpenCL-ICD-Loader/build")
set(CMAKE_PREFIX_PATH "/home/vasilii/programming/parallel_prog_7_sem/opencl_toolchain/OpenCL-CLHPP/build")
cmake_minimum_required(VERSION 3.0)
cmake_policy(VERSION 3.0...3.18.4)
project(proj)
add_executable(matrix main.cc)
add_executable(params params.cc)
find_package(OpenCLHeaders REQUIRED)
find_package(OpenCLICDLoader REQUIRED)
find_package(OpenCLHeadersCpp REQUIRED)
target_link_libraries(matrix PRIVATE OpenCL::Headers OpenCL::OpenCL OpenCL::HeadersCpp)
target_link_libraries(params PRIVATE OpenCL::Headers OpenCL::OpenCL OpenCL::HeadersCpp)
